# sandbox-gama

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Doxyfile  HACKING.md  MAINTAINING.md  Makefile.am  NEWS  README  README.language  README.md  TODO.md  cepek-code.md  configure.ac  markdown-notes.md  modern_cmakelists.txt  sandbox-gama.md
.var/announce-gama/: gama-announce.sh
0_my_notes/: chat_gpt_upstream.md
data/: 01-test.sh  cepek-code.md
doc/: Makefile.am  README.md  companion-tools.texi  ellipsoids.texi  gama-install.texi  gama-introduction.texi  gama-local-adj-glossary.texi  gama-local-adj.texi  gama-local-input.texi  gama.texi  xyz2blh.texi
doc/fig/: data_1-2.eps
lib/: Makefile.am
lib/gnu_gama/: ellipsoid.h  ellipsoids.cpp  ellipsoids.h  version.cpp  version.h  xml_expat.h
lib/gnu_gama/g3/: g3_model_write_xml_adjustment_results.cpp  g3_point.cpp
lib/gnu_gama/local/: deformation.cpp  deformation.h  html.cpp  language.cpp  language.h  localnetwork2sql.cpp  network.cpp  network.h  svg.cpp  svg.h
lib/gnu_gama/local/acord/: acord2.h
lib/gnu_gama/xml/: comparexyz.cpp  comparexyz.h  localnetworkoctave.cpp  localnetworkxml.cpp
lib/krumm/: common.cpp  input.cpp  k2gkf.cpp  k2gkf.h
lib/matvec/: svd.h
scripts/: build-dictionaries.sh  ellipsoids_xml.cpp  slovnikar.cpp  slovnikar.md
src/: Makefile.am  compare-xyz.cpp  gama-g3.cpp  gama-local-deformation.cpp  gama-local-gkf2yaml.cpp  gama-local-xml2sql.cpp  gama-local-xml2txt.cpp  gama-local-yaml2gkf.cpp  gama-local.cpp  krumm2gama-local.cpp
tests/: CMakeLists.txt  Makefile.am
tests/acord2/: CMakeLists.txt
tests/compare-xyz/: CMakeLists.txt  Makefile.am  compare-xyz.in
tests/compare-xyz/input/: example-01-g3-adj.xml  example-01-g3-inp.xml  example-01-local-adj.xml  example-01-local-inp.xml  example-02-a-g3-adj.xml  example-02-a-g3-inp.xml  example-02-a-local-adj.xml  example-02-a-local-inp.xml  example-02-b-g3-adj.xml  example-02-b-g3-inp.xml  example-02-b-local-adj.xml  example-02-b-local-inp.xml  ghilani-g3-adj.xml  ghilani-g3-inp.xml
tests/extra-tests/: Makefile.am
tests/gama-g3/: .gitignore  CMakeLists.txt  Makefile.am
tests/gama-g3/input/: Makefile.am
tests/gama-g3/src/: Makefile.am  check_adjustment.cpp  gama-g3-ellipsoid-xyz2blh-list.in  geng3test-md.h  geng3test.cpp  geng3test.h  geng3test.md
tests/gama-local/: CMakeLists.txt  Makefile.am  gama-local-version.in
tests/gama-local-deformation/: CMakeLists.txt  Makefile.am  gama-local-deformation-diff.sh_
tests/gama-local-deformation/demo-01/: data-0.gkf  data-0.txt  data-0.xml  data-1.gkf  data-1.txt  data-1.xml  data-2.gkf  data-2.txt  data-2.xml
tests/gama-local-deformation/input/diff/: data-1-2.txt  data-1.xml  data-2.xml
tests/gama-local/input/ctu/: README.md
tests/gama-local/input/deformation/: data-1.xml  data-2.xml
tests/gama-local/input/krumm/2D/: Wolf_DistanceDirectionAngle_free.xml
tests/gama-local/src/: check_version.cpp
tests/krumm/: CMakeLists.txt  Makefile.am
tests/matvec/: matvec_test_003.cpp
tests/random-test-data/: .gitignore
tests/random-test-data/gen-test/: CMakeLists.txt  README.md  gen-test.cpp
tests/random-test-data/geng3/: CMakeLists.txt  README.md  geng3.cpp  geng3.h  help.h  main.cpp  run-gen3.sh
tests/svg/axis-xy/: REAME.md  gama-local-left-en.gkf  gama-local-left-es.gkf  gama-local-left-ne.gkf  gama-local-left-nw.gkf  gama-local-left-se.gkf  gama-local-left-wn.gkf  gama-local-left-ws.gkf  gama-local-right-en.gkf  gama-local-right-es.gkf  gama-local-right-ne.gkf  gama-local-right-nw.gkf  gama-local-right-se.gkf  gama-local-right-sw.gkf  gama-local-right-wn.gkf  gama-local-right-ws.gkf  run.sh
xml/: ellipsoids.xml
xml/lang/00/: gama-local.00.lang  gamalib.00.lang  gkfparser.00.lang  html.00.lang  network.00.lang  pobs.00.lang  review.00.lang  rmpoints.00.lang
xml/lang/en/: pobs.lang
xml/lang/tr/: pobs.tr.lang
